# kiter

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmd_tests  dse_experiments.md
src/kiter/: CMakeLists.txt  dataset_generator.cpp  kiter.cpp  main.cpp
src/libkiter/: CMakeLists.txt
src/libkiter/algorithms/: CMakeLists.txt  VHDLCircuit.cpp  VHDLCircuit.h  VHDLComponent.cpp  VHDLComponent.h  VHDLConnection.cpp  VHDLConnection.h  VHDLGenerator.cpp  VHDLGenerator.h  algorithms.h  mappings.h  normalization.cpp  normalization.h  scc.cpp  scc.h  schedulings.h  software_noc.cpp  symbolic_execution.cpp  transformations.h
src/libkiter/algorithms/analysis/: cycle_detection.cpp  cycle_detection.h
src/libkiter/algorithms/buffersizing/: backpressure.cpp  backpressure.h  periodic.cpp  periodic.h  periodic_fixed.cpp  periodic_fixed.h
src/libkiter/algorithms/dse/: BufferInfos.h  Constraint.cpp  Constraint.h  LivenessModularDSE.cpp  LivenessModularDSE.h  ModularDSE.cpp  ModularDSE.h  StorageDistribution.cpp  StorageDistribution.h  StorageDistributionSet.cpp  StorageDistributionSet.h  StorageDistributionTree.h  ThroughputBufferingDSE.cpp  ThroughputBufferingDSE.h  ThroughputConstraint.cpp  ThroughputConstraint.h  TokenConfiguration.cpp  TokenConfiguration.h  TokenConfigurationSet.cpp  TokenConfigurationSet.h  abstract_dep_graph.cpp  abstract_dep_graph.h  base_monotonic_optimisation.cpp  base_monotonic_optimisation.h  buffer_sizing.cpp  buffer_sizing.h  deep_dse.cpp  deep_dse.h  dichotomous_search.cpp  dichotomous_search.h  dse.cpp  dse.h  dse_utils.cpp  dse_utils.h  kperiodic.cpp  kperiodic.h  monotonic_optimisation.cpp  periodic.cpp  periodic.h
src/libkiter/algorithms/experiments/: ExpansionGraph.cpp
src/libkiter/algorithms/liveness/: LivenessConstraint.cpp  LivenessConstraint.h  LivenessModularDSE.cpp  LivenessModularDSE.h  SC.cpp  SC.h
src/libkiter/algorithms/mapping/: BufferlessNoCMapAndRoute.cpp  createNoC.cpp  generateTDMA.cpp  modelCommunications.cpp  modelCommunications.h  moduloMapping.cpp  randomMapping.cpp  randomRouting.cpp  xyRouting.cpp
src/libkiter/algorithms/mapping/bufferless_utils/: GraphMapper.h
src/libkiter/algorithms/ml/: CMakeLists.txt  minimizing_prediction.cpp  minimizing_prediction.h
src/libkiter/algorithms/scheduling/: BufferlessNoCScheduling.cpp  CSDF_KPeriodicScheduling.cpp  CSDF_KPeriodicScheduling_LP.cpp  CSDF_SPeriodicScheduling.cpp  TDMAScheduler.cpp  TDMAScheduler.h
src/libkiter/algorithms/throughput/: SDF3Wrapper.cpp  actor.cpp  actor.h  csdf_strictly_periodic.cpp  kperiodic.cpp  kperiodic.h  so4_noc.cpp  state.cpp  state.h  symbolic_execution.cpp  symbolic_execution.h
src/libkiter/algorithms/transformation/: AddFeedbackBuffers.cpp  AddFeedbackBuffers.h  addInOutLoop.cpp  addInOutLoop.h  iterative_evaluation.cpp  iterative_evaluation.h  merge_operators.cpp  merge_operators.h  merging.cpp  normalize.cpp  normalize.h  remove_reentrancy.cpp  singleOutput.cpp  singleOutput.h  subgraph.cpp  subgraph.h
src/libkiter/algorithms/vhdl_generation/: VHDLCircuit.cpp  VHDLCircuit.h  VHDLCommons.h  VHDLComponent.cpp  VHDLComponent.h  VHDLConnection.cpp  VHDLConnection.h  VHDLGenerator.cpp  VHDLGenerator.h
src/libkiter/algorithms/vhdl_generation/reference_files/: audio_interface_wrapper.vhd  audio_interface_wrapper.vhdl  axi_fifo.vhd  axi_fifo_n.vhd  axi_fifo_one.vhd  axi_fifo_zero.vhd  axi_float2int.vhd  axi_int2float.vhd  axi_merger.vhd  axi_merger_one.vhd  axi_merger_three.vhd  axi_select2.vhd  axi_splitter.vhd  axi_splitter_1.vhd  axi_splitter_2.vhd  axi_splitter_3.vhd  axi_splitter_4.vhd  axi_splitter_9.vhd  broadcast.vhdl  const_value_n_outputs.vhdl  countdown.vhdl  cycle_counter.vhdl  delay.vhd  delayed_buffer.vhd  deserializer.vhd  fix2fp_and_scaledown.vhd  flopoco_axi_interface_1.vhd  flopoco_axi_interface_2.vhd  flopoco_axi_interface_3.vhd  flopoco_hs_interface_1.vhdl  flopoco_hs_interface_2.vhd  flopoco_hs_interface_3.vhdl  flopoco_hs_interface_n.vhdl  fp2fix_and_scaleup.vhd  fp_floor.vhd  fpc_to_i2s.vhd  hs_fifo.vhdl  hs_fifo_n.vhd  hs_fifo_n.vhdl  hs_fifo_one.vhd  (+36 more)
src/libkiter/algorithms/vhdl_generation/reference_files/operators/: attach_f125.vhdl  attach_f250.vhdl  attach_f50.vhdl  delay_f250.vhdl  fix2fp_flopoco.vhdl  fix2fp_flopoco_f125.vhdl  fix2fp_flopoco_f250.vhdl  fix2fp_flopoco_f50.vhdl  float2int_flopoco.vhdl  float2int_flopoco_f125.vhdl  float2int_flopoco_f250.vhdl  float2int_flopoco_f50.vhdl  floor_flopoco.vhdl  fp2fix_flopoco.vhdl  fp2fix_flopoco_f125.vhdl  fp2fix_flopoco_f250.vhdl  fp2fix_flopoco_f50.vhdl  fp_abs_f125.vhdl  fp_abs_f250.vhdl  fp_abs_f50.vhdl  fp_add_flopoco.vhdl  fp_add_flopoco_f125.vhdl  fp_add_flopoco_f250.vhdl  fp_add_flopoco_f50.vhdl  fp_diff_flopoco.vhdl  fp_diff_flopoco_f125.vhdl  fp_diff_flopoco_f250.vhdl  fp_diff_flopoco_f50.vhdl  fp_div_flopoco.vhdl  fp_div_flopoco_f125.vhdl  fp_div_flopoco_f250.vhdl  fp_div_flopoco_f50.vhdl  fp_floor_f125.vhdl  fp_floor_f250.vhdl  fp_floor_f50.vhdl  fp_max_f125.vhdl  fp_max_f250.vhdl  fp_max_f50.vhdl  fp_min_f125.vhdl  fp_min_f250.vhdl  (+44 more)
src/libkiter/algorithms/vhdl_generation/reference_files/testbenches/: audio_test0.mem  tb_audio_in_out.vhd
src/libkiter/algorithms/vhdl_generation/reference_files/ui/: button.vhdl  (+6 more)
src/libkiter/commons/: CMakeLists.txt  KiterRegistry.h  commons.cpp  commons.h  howard_cycle_ratio.hpp  iterators.h  verbose.h
src/libkiter/generators/: CMakeLists.txt  LTEGeneator.cpp  LTEGenerator.h  NormalizedCycleGenerator.cpp  NormalizedCycleGenerator.h  RandomGenerator.cpp
src/libkiter/lp/: CMakeLists.txt  glpsol.cpp  glpsol_gurobi.cpp
src/libkiter/ml/: CMakeLists.txt  minimizing_prediction.cpp  minimizing_prediction.h
src/libkiter/models/: AbstractDataflow.h  CMakeLists.txt  Dataflow.h  EventGraph.h  NaiveDataflow.cpp  NaiveDataflow.h  NoC.cpp  NoC.h  NoCGraph.cpp  NoCGraph.h  Scheduling.cpp  Scheduling.h  howard_cycle_ratio.hpp  repetition_vector.cpp  repetition_vector.h
src/libkiter/printers/: CMakeLists.txt  SDF3Wrapper.cpp  SDF3Wrapper.h  TDMAWriter.cpp  TDMAWriter.h  so4nocWriter.cpp  so4nocWriter.h  stdout.cpp  stdout.h
(+91 files in other folders)
